fix: adjusted layout of view and tab page styles

--- a/apps/dispatch/src/app/components/simulations/view/view.component.scss
+++ b/apps/dispatch/src/app/components/simulations/view/view.component.scss
@@ -46,4 +46,6 @@ biosimulations-tab-page ::ng-deep .icon-list {
 
 .simulation-run-view-parent-container {
   min-height: 1800px;
+  margin-left: 7rem;
+  margin-right: 7rem;
 }
